
[package]
name = "intvg"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "MeiHui FAN <mhfan@ustc.edu>" ]
repository  = "https://github.com/mhfan/intvg"  # https://crates.io/category_slugs
categories  = [ "parser-implementations", "rendering", "graphics", "multimedia::images" ]
description = "lib/tool in Rust to load/save/render tvg file, parse from svg file by usvg"
keywords = [ "TinyVG", "SVG", "vector-graphic", "EVG", "Blend2D" ]
#exclude  = [ "examples" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#byteorder = "1.4"  # use <T>::(from/to)_le_bytes instead
#tiny-skia-path = "0.11"
tiny-skia = "0.11"
kurbo = "0.11"  # Bezier curves utils
usvg  = "0.42"

#build-time = { version = "0.1", git = "https://github.com/AlephAlpha/build-time" }
png = { version = "0.17", optional = true }

[lib]
# Disable doctests as a workaround for https://github.com/rust-lang/rust-bindgen/issues/1313
#doctest = false

[features]
ovg = []
ugl = []

b2d = []
b2d_sfp = [ "b2d" ]

ftg = []
evg_fixed = [ "evg" ] # quite slow than floating point on Apple M1
evg = [ "dep:png" ]

#cc = [ "dep:cc", "dep:bindgen", "dep:glob" ]   # implied by optional dependency
#default = [ "b2d", "evg" ] # XXX: ftg/ovg/ugl not completely work yet

[[bench]]
name = "engine_2d"
harness = false

[dev-dependencies]
criterion = "0.5"
#rexpect = "0.5"

[build-dependencies]
cc = { version = "1.0", features = [ "parallel" ] }
bindgen = "0.69"
chrono = "0.4"
glob = "0.3"
#walkdir = "2.4"

[profile.dev]
opt-level = 1   # Enable a small amount of optimization in debug mode

[profile.dev.package."*"] # For any non-workspace member (all dependencies)
strip = 'debuginfo'
codegen-units = 1
opt-level = 3

[profile.release]
codegen-units = 1
strip = 'debuginfo'
panic = 'abort'
#opt-level = 3   # default level
lto = 'fat' # true

[workspace]
#members = [ "wcnvs" ]

