
[package]
name = "wcnvs"
version = "0.1.0"
authors = [ "MeiHui FAN <mhfan@ustc.edu>" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = [ "web" ] } # "router", "desktop", "web"
dioxus-logger = "0.5"
tracing = "0.1"

js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [ 'Window', 'Document', 'HtmlCanvasElement',
    'CanvasRenderingContext2d', 'Path2d', 'CanvasGradient', 'CanvasWindingRule',
    'ResizeObserver', 'ResizeObserverEntry', #'ResizeObserverOptions',
] }

instant = { version = "0.1", features = [ "wasm-bindgen" ] }
intvg = { path = "..", default-features = false } # git = "https://github.com/mhfan/intvg"
kurbo = "0.11"   # Bezier curves utils
usvg  = "0.41"

[workspace]

